# quantuminspire

./: .editorconfig  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  conda-environment.yml  environment.yml  group-1-proj-LaFlamme_logical_qubit.py  pyproject.toml  requirements.txt  setup.py  tox.ini  version.py
.devcontainer/: Dockerfile  Vagrantfile  devcontainer.json  docker-compose.yaml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: actions.yaml  build.yaml  github-ci.yaml  github-ci.yml  nightly.yaml  publish.yml  release.yaml  tests.yaml
.quantuminspire/: config.json
ci/: Jenkinsfile
docs/: Makefile  api.rst  bitflip_code.py  conf.py  credentials.rst  example_entangle.py  example_projectq.ipynb  example_projectq_entangle.py  example_projectq_grover.py  example_qiskit_entangle.py  examplenotebooks.rst  examples.rst  exceptions.rst  grover_algorithm_qi.ipynb  index.rst  introduction.rst  job.rst  license.rst  make.bat  projectq.rst  projectq_backend_qx.rst  qi-performance-test.ipynb  qiskit.rst  qiskit_backend_qx.rst  qiskit_circuit_parser.rst  qiskit_qi_job.rst  qiskit_qi_result.rst  qiskit_quantum_inspire_provider.rst  shor_code.py  test_script.py
docs/_static/: theme_overrides.css
docs/classifier_example/: Classification v2.ipynb  Classification v3 (4 data points).ipynb  Classification v4 (4 features).ipynb  classification_example1_2_data_points.ipynb  classification_example2_4_data_points.ipynb  classification_example3_4_features.ipynb  classification_v2.ipynb  classification_v3_4_data_points.ipynb  classification_v4_4_features.ipynb  data_plotter.py  data_preprocessing_class.py
docs/examples/: delete_projects.py  example_projectq.ipynb  example_projectq_entangle.py  example_projectq_grover.py  example_qiskit_conditional.py  example_qiskit_entangle.py  grover_algorithm_qi.ipynb  qi-performance-test.ipynb
docs/examples/classifier_example/: classification_example1_2_data_points.ipynb  classification_example2_4_data_points.ipynb  classification_example3_4_features.ipynb  data_plotter.py
docs/sat_example/: README.md  main.py
docs/sat_example/src/: optimizer.py  run.py  sat_utilities.py
docs/source/: conf.py  index.rst  introduction.rst  license.rst  modules.rst  projectq.rst  projectq_backend_qx.rst  qiskit_backend_qx.rst  qiskit_qi_job.rst  qiskit_quantum_inspire_provider.rst
examples/: hqca_circuit.py  hqca_circuit_v3.py  hydrogen_qiskit.py  qaoa.py  qaoa_v3.py  qiskit.py  simple.py  unfair_dice.py
group-1-proj/: LaFlamme logical qubit.py  Nathan test.py
group_1_proj/: LaFlamme_logical_qubit.py  Nathan test.py  bitflip_code.py  codes.py  noise_matrix_generator.py  shor_code.py
quantuminspire/: __init__.py  api.py  cli.py  qitools.py  test_algorithm_compiled_decomposition.cq
quantuminspire/.quantuminspire/: config.json
quantuminspire/auth_manager/: auth_manager.py
quantuminspire/cli/: _pyinstaller.py  command_list.py
quantuminspire/config_manager/: config_manager.py
quantuminspire/job_manager/: job_manager.py
quantuminspire/managers/: algorithm_execution_manager.py  auth_manager.py  config_manager.py  job_manager.py  resource_manager.py
quantuminspire/qi_api/: qi_api.py
quantuminspire/qiskit/: qiskit_backend.py
quantuminspire/sdk/: circuit.py  quantum_interface.py  stop_execution.py
quantuminspire/sdk/models/: base_algorithm.py  circuit.py  circuit_v3.py  cqasm_algorithm.py  file_algorithm.py  hybrid_algorithm.py  job_options.py
quantuminspire/sdk/qiskit/: backend.py  circuit_parser.py  exceptions.py  measurements.py
quantuminspire/settings/: base_settings.py  models.py  project_settings.py  user_settings.py
quantuminspire/util/: authentication.py  configuration.py  connections.py  utils.py
quantuminspire/util/api/: base_backend.py  base_runtime.py  local_backend.py  local_runtime.py  quantum_interface.py  remote_backend.py  remote_runtime.py
quantuminspire/utils/: authentication.py  connections.py
src/quantuminspire/: api.py  calibration_viewer.py  credentials.py  exceptions.py  job.py
src/quantuminspire/projectq/: backend_qx.py
src/quantuminspire/qiskit/: __init__.py  backend_qx.py  circuit_parser.py  measurements.py  qi_job.py  qi_result.py  qiskit_backend.py  quantum_inspire_provider.py  serialization.py
src/quantuminspire/utils/: common.py
src/tests/: Dockerfile.build  Jenkinsfile  requirements.txt
src/tests/quantuminspire/: test_api.py  test_calibrationviewer.py  test_credentials.py  test_job.py  test_version.py
src/tests/quantuminspire/projectq/: test_backend_qx.py
src/tests/quantuminspire/qiskit/: test_backend_qx.py  test_circuit_parser.py  test_measurements.py  test_qi_job.py  test_qi_result.py  test_quantum_inspire_provider.py
tests/: conftest.py  e2e_test.py  test_api.py  test_cli.py  test_quantuminspire.py
tests/auth_manager/: test_auth_manager.py
tests/cli/: test_command_list.py
tests/config_manager/: test_config_manager.py
tests/data_files/: circuit.cq  hqca_circuit.py  notebook.ipynb
tests/job_manager/: test_job_manager.py
tests/managers/: test_algorithm_execution_manager.py  test_auth_manager.py  test_config_manager.py  test_job_manager.py  test_resource_manager.py
tests/managers/.quantuminspire/: config.json
tests/qi_api/: test_qi_api.py
tests/sdk/: test_base_algorithm.py  test_circuit.py  test_circuit_v3.py  test_cqasm_algorithm.py  test_hybrid_algorithm.py
tests/sdk/qiskit/: test_backend.py  test_circuit_parser.py  test_measurements.py
tests/settings/: test_base_settings.py  test_models.py  test_project_settings.py  test_user_settings.py
tests/util/: test_authentication.py  test_configuration.py  test_connections.py  test_utils.py
tests/util/api/: test_local_backend.py  test_local_runtime.py  test_quantum_interface.py  test_remote_backend.py  test_remote_runtime.py
tests/utils/: test_authentication.py  test_connections.py
